# tinygen

./: .gitignore  README.md  ROADMAP.md  pyproject.toml  setup.cfg
ci/trainer/: Dockerfile
scripts/: build.sh  install-poetry.sh  lint.sh  local_image_train.sh  local_train.sh  test.sh
tests/: test_classification_train.py  test_metrics.py  test_parsers.py  test_preprocess.py  test_tfrecords.py
tests/io/: test_tfrecords.py  test_utils.py
tinygen/: callbacks.py  evaluate.py  evaluate_pars.py  metrics.py  preprocess.py  tinygen.py  train.py  train_pars.py
tinygen/io/: dataset.py  tfrecords.py  utils.py
tinygen/models/: base_model.py
